--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "contentful": "^9.3.3",
     "gsap": "^3.11.4",
     "splitting": "^1.0.6",
     "three": "^0.134.0",
     "troisjs": "^0.3.4",
     "vue": "^3.2.45",
+    "vue-meta": "^2.4.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
