--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "contentful": "^9.3.3",
     "gsap": "^3.11.4",
+    "split-type": "^0.3.3",
     "splitting": "^1.0.6",
     "three": "^0.134.0",
     "troisjs": "^0.3.4",
