--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.16",
     "contentful": "^9.3.3",
     "gsap": "^3.11.4",
     "split-type": "^0.3.3",
@@ -21,6 +22,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.26",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.0.0"
   }
 }
