--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@studio-freight/lenis": "^1.0.16",
     "contentful": "^9.3.3",
     "gsap": "^3.11.4",
+    "mailersend": "^2.2.0",
     "split-type": "^0.3.3",
     "splitting": "^1.0.6",
     "three": "^0.134.0",
