--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@studio-freight/lenis": "^1.0.16",
     "contentful": "^9.3.3",
     "gsap": "^3.11.4",
+    "keen-slider": "^6.8.6",
     "mailersend": "^2.2.0",
+    "moment-timezone": "^0.5.45",
     "split-type": "^0.3.3",
     "splitting": "^1.0.6",
     "three": "^0.134.0",
