--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@studio-freight/lenis": "^1.0.16",
     "contentful": "^9.3.3",
+    "firebase": "^10.12.1",
     "gsap": "^3.11.4",
     "keen-slider": "^6.8.6",
     "mailersend": "^2.2.0",
