--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^16.5.0",
+    "@contentful/rich-text-links": "^16.6.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
@@ -16,6 +18,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@studio-freight/lenis": "^1.0.16",
     "contentful": "^9.3.3",
+    "contentful-rich-text-vue-renderer": "^3.1.0",
     "firebase": "^10.12.1",
     "gsap": "^3.11.4",
     "keen-slider": "^6.8.6",
