--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_CONTENTFUL_API_KEY="fRA4jX66in_xDQqVFN8_xQNNxc36wHXnT_r9GLWaipI"
 VITE_CONTENTFUL_SPACE_ID="3dsoyu63dy91"
+VITE_RESEND_API_KEY="re_eiVpoJBQ_6vCTGzhYcY1AjMMvDkvgt7ur"
