--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_CONTENTFUL_API_KEY="fRA4jX66in_xDQqVFN8_xQNNxc36wHXnT_r9GLWaipI"
 VITE_CONTENTFUL_SPACE_ID="3dsoyu63dy91"
 VITE_RESEND_API_KEY="re_eiVpoJBQ_6vCTGzhYcY1AjMMvDkvgt7ur"
+VITE_WEB3FORMS_ACCESS_KEY="ec632a69-de8c-4fe2-864a-b63001799fe3"
