--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "resend": "^4.0.0",
     "split-type": "^0.3.3",
     "splitting": "^1.0.6",
+    "swiper": "^11.2.4",
     "three": "^0.134.0",
     "three.interactive": "^1.7.0",
     "troisjs": "^0.3.4",
     "vue": "^3.2.45",
+    "vue-carousel": "^0.18.0",
     "vue-meta": "^2.4.0",
     "vue-router": "^4.1.6"
   },
