--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "leupeuteu",
+  "name": "LaPetiteTribu",
   "private": true,
-  "version": "0.0.0",
+  "version": "10.3.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -31,16 +31,18 @@
     "three": "^0.134.0",
     "three.interactive": "^1.7.0",
     "troisjs": "^0.3.4",
+    "vite-plugin-image-optimizer": "^2.0.2",
     "vue": "^3.2.45",
     "vue-carousel": "^0.18.0",
     "vue-meta": "^2.4.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue": "^6.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.0.0"
+    "vite": "^6.0.0",
+    "vite-plugin-sitemap": "^0.8.2"
   }
 }
